<resources>
    <string name="app_name">Bubble Magazyn</string>
    <string name="loginButtonText">Zaloguj</string>
    <string name="LoginLabelText">Login</string>
    <string name="PasswordLabelText">Hasło</string>
    <string name="New">Nowy</string>
    <string name="Edit">Edycja</string>
    <string name="Delete">Usuń</string>
    <string name="Surname">Nazwisko</string>
    <string name="Name">Imie</string>
    <string name="Role">Rola</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="name">Imie</string>
    <string name="surname">Nazwisko</string>
    <string name="admin">Admin</string>
    <string name="Save">Zapisz</string>
    <string name="description">Opis</string>
    <string name="logo">Logo</string>
    <string name="locationDictionary">SŁOWNIK LOKACJI</string>
    <string name="manageLocationWh">ZARZĄDZAJ MAGAZYNEM LOKACJI</string>
    <string name="locationHistory">HISTORIA LOKACJI</string>
    <string name="employeesAccess">Uprawnienia Pracowników</string>
    <string name="locations">WYSPY</string>
    <string name="users">UŻYTKOWNICY</string>
    <string name="warehouse">MAGAZYN</string>
    <string name="delivery">DOSTAWA</string>
    <string name="itemsDictionary">SŁOWNIK PRZEDMIOTÓW</string>
    <string name="warehouseStock">STANY MAGAZYNOWE</string>
    <string name="warehouseHistory">HISTORIA MAGAZYNU</string>
    <string name="itemGroupDictionary">SŁOWNIK GRUP PRZEDMIOTÓW</string>
    <string name="Group">Grupa</string>
    <string name="measurement">Miara</string>
    <string name="have_exp_date">Ma datę przydatności?</string>
    <string name="everything">Wszystko</string>
    <string name="year">Rok</string>
    <string name="month">Miesiąc</string>
    <string name="day">Dzień</string>
</resources>