<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Users">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/scrollView2">

        <TableLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1,2,3"
                android:id="@+id/usersTable">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/headerRow">

                <TextView
                        android:text="@string/Surname"
                        android:layout_width="161dp"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:id="@+id/textView3"
                        android:layout_column="0"/>

                <TextView
                        android:text="@string/Name"
                        android:layout_width="92dp"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:id="@+id/textView"
                        android:layout_column="1"/>

                <TextView
                        android:text="@string/Role"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:id="@+id/textView2"
                        android:layout_column="2"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/New"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/newUserButton"
                android:layout_weight="1"
                android:onClick="newUserClick"/>

        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editUserButton"
                android:layout_weight="1"
                android:onClick="editUserClick"/>

        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/Delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/previewUserButton"
                android:layout_weight="1"
                android:onClick="deleteUser"/>
    </LinearLayout>
            
</androidx.constraintlayout.widget.ConstraintLayout>