<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainAdminMenu">

    <Button
            android:text="@string/locations"
            android:layout_width="0dp"
            android:layout_height="141dp"
            android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.65"
            android:onClick="buttonLocationsClick"/>

    <Button
            android:text="@string/users"
            android:layout_width="0dp"
            android:layout_height="141dp"
            android:id="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            android:onClick="buttonUsersClick"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="141dp"
            android:id="@+id/button5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.35"
            android:text="@string/warehouse"
            android:onClick="buttonWarehouseClick"/>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="211dp"
            app:srcCompat="@drawable/logo_crazybubble"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/logo"/>

</androidx.constraintlayout.widget.ConstraintLayout>