<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WarehouseHistory"
        android:id="@+id/historyView">

    <Spinner
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/locationHistorySpinner"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/locationHistorySpinner"
            android:clickable="true"
            android:onClick="changeHistoryDate"
            android:id="@+id/historyDateView"
            android:textSize="30sp"/>


    <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/historyDateView"
            android:id="@+id/historyTabLayout">

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:id="@+id/dayTab">
        </com.google.android.material.tabs.TabItem>


        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:id="@+id/monthTab"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:id="@+id/yearTab"/>

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalTab"
                android:text="@string/everything"/>
    </com.google.android.material.tabs.TabLayout>

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/historyTabLayout"
            tools:layout_editor_absoluteY="73dp"
            tools:layout_editor_absoluteX="1dp"
            android:id="@+id/historyTable"
            android:stretchColumns="0,1"/>



</androidx.constraintlayout.widget.ConstraintLayout>