<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ItemGroupDictionary">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/scrollView3">

        <TableLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1"
                android:id="@+id/itemGroupDictionaryTable">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/headerRowGroupDictionary">

                <TextView
                        android:text="Nazwa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_column="0"/>

                <TextView
                        android:text="@string/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_column="1"/>

            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/New"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="newItemGroupClick"/>

        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/Edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="editItemGroupClick"/>

        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/Delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="deleteItemGroup"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>