<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/loginButtonText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:onClick="buttonOnClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="@string/LoginLabelText"
            />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:hint="@string/PasswordLabelText"
            android:textAlignment="center"
            android:textSize="24sp"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="215dp"
            android:layout_height="131dp"
            android:id="@+id/progressBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.79"
            />

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="211dp"
            app:srcCompat="@drawable/logo_crazybubble"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/logo"/>


</androidx.constraintlayout.widget.ConstraintLayout>