<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewUser">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/scrollView2">

        <TableLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:id="@+id/userTable"
                android:padding="20sp"
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/logRow1">

                <TextView
                        android:text="@string/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_column="0"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="15sp"
                    android:id="@+id/logRow2">

                <EditText
                        android:layout_width="92sp"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:id="@+id/login"
                        android:layout_span="2"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/logRow3">

                <TextView
                        android:text="@string/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_column="0"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="15sp"
                    android:id="@+id/logRow4">

                <EditText
                        android:layout_width="92sp"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:layout_span="2"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_column="0"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="15sp">

                <EditText
                        android:layout_width="92sp"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:id="@+id/name"
                        android:layout_span="2"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/surname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_column="0"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="15sp">

                <EditText
                        android:layout_width="92sp"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:id="@+id/surname"
                        android:layout_span="2"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/admin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_column="0"/>

                <CheckBox
                        android:layout_width="92sp"
                        android:layout_height="wrap_content"
                        android:id="@+id/isAdmin"
                        android:layout_column="1"/>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/Edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/addUserButton"
                android:layout_weight="1"
                android:onClick="createAcc"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>