<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewItemGroup">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TableLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:padding="20sp"
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="Nazwa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_column="0"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="15sp">

                <EditText
                        android:layout_width="92sp"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:id="@+id/itemGroupName"
                        android:layout_span="2"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/measurement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_column="0"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="15sp">

                <Spinner
                        android:layout_width="92sp"
                        android:layout_height="64dp"
                        android:textSize="40sp"
                        android:id="@+id/measurementSpinner"
                        android:layout_span="2"/>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/have_exp_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:layout_column="0"/>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="15sp">

                <CheckBox
                        android:layout_width="92sp"
                        android:layout_height="wrap_content"
                        android:textSize="40sp"
                        android:id="@+id/haveExpDateCb"
                        android:layout_span="2"/>
            </TableRow>
        </TableLayout>
    </ScrollView>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <Button
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/Save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/saveGroupBtn"
                android:layout_weight="1"
                android:onClick="createItemGroup"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>